- New: Barcodes are now editable on master product page (thanks @DHM47 for the inital work) (#391)
- New: Grouping feature for stock overview like on server
- Improved: Unnecessary bottom sheets in master data section were removed
- Improved: Master product page has new button (save without closing) to add barcodes after creation
- Improved: Workflow for master data pages with keyboard
- Fixed: Product info bottom sheet didn't open if location not set in product
- Fixed: Scrollbars don't stop above the bottom anymore
- Fixed: Unsorted lists on master data product pages (thanks @Turysaz) (#473)
- Fixed: Search on master data products list was broken after back press
- Fixed: 'Due soon days' value in stock overview was always 5 days

2.0.0:
Major changes since 1.10.1:
- Compatibility with grocy v3.x.x
- Incompatibility with grocy v2.7.x
- Design & navigation overhaul ("Material You" redesign is coming in a future update)
- New pages: Overview, Inventory, Transfer & more
- Rewritten pages: Settings, Purchase, Consume & more
- Additional better barcode scanner: ML Kit (not in F-Droid version)
Changes since 2.0.0-beta05:
- Improved: Ability to enter dates with keyboard with new option (#394)
- Improved: Option to use smaller font on shopping mode page (#379)
- Improved: Product Choose page with OFF is available on all four transaction pages (#466)
- Improved: Focus product name field if empty on master product page init
- Improved: Focus product field if empty on shopping list item page init
- Improved: On shopping list item page tap done on keyboard when in notes field to save item
- Improved: On shopping list item page amount is prefilled with 1 (#406)
- Improved: (not F-Droid) Suggestion popup for ML Kit scanner after 15 scans with ZXing
- Improved: long lists are now displaying a vertical scrollbar
- Fixed: Sorting of entries on master data pages (#463) (thanks @Turysaz)
- Fixed: Hide store fields if price tracking feature is disabled

2.0.0-beta05: